--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,14 +16,14 @@
 -->
 
 <resources>
+    <dimen name="text_sz_title">20sp</dimen>
+
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="grid_item_movie_width">110dp</dimen>
     <dimen name="detail_backdrop_height">256dp</dimen>
     <dimen name="card_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="list_item_avatar_size">40dp</dimen>
-    <dimen name="text_sz_title">20sp</dimen>
     <dimen name="padding_top_title">30dp</dimen>
     <dimen name="padding_left_movie_info">12dp</dimen>
     <dimen name="width_poster">170dp</dimen>
@@ -31,10 +31,26 @@
     <dimen name="padding_top_poster">20dp</dimen>
     <dimen name="padding_top_genres">10dp</dimen>
     <dimen name="padding_right_genres">5dp</dimen>
-    <dimen name="text_sz_reviews_title">20sp</dimen>
     <dimen name="ratingbar_margin_top">2dp</dimen>
     <dimen name="rating_detail_padding_left">5dp</dimen>
     <dimen name="runtime_linearlayout_padding_top">10dp</dimen>
     <dimen name="runtime_padding_right">5dp</dimen>
     <dimen name="detail_date_padding_top">10dp</dimen>
+    <dimen name="expanded_title_margin_start">48dp</dimen>
+    <dimen name="expanded_title_margin_end">64dp</dimen>
+    <dimen name="zero">0dp</dimen>
+    <dimen name="runtime_text_padding_top">10dp</dimen>
+    <dimen name="runtime_text_padding_bottom">10dp</dimen>
+    <dimen name="runtime_text_padding_left">30dp</dimen>
+    <dimen name="reviews_padding_bottom">20dp</dimen>
+    <dimen name="plot_padding">12dp</dimen>
+    <dimen name="trailers_padding_bottom">20dp</dimen>
+    <dimen name="trailers_padding_top">10dp</dimen>
+    <dimen name="trailer_image_height">150dp</dimen>
+    <dimen name="trailer_image_layout_margin">5dp</dimen>
+    <dimen name="play_icon_size">60dp</dimen>
+    <dimen name="review_card_corner_radius">2dp</dimen>
+    <dimen name="review_card_content_padding">20dp</dimen>
+    <dimen name="review_card_layout_margin">10dp</dimen>
+
 </resources>
