--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -27,9 +27,9 @@
     <ImageView
         android:id="@+id/detail_backdrop"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
+        android:layout_height="@dimen/detail_backdrop_height"
         android:scaleType="fitXY"
+        android:adjustViewBounds="true"
         android:contentDescription="@null" />
 
     <LinearLayout
